[project]
name = "minbpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "regex>=2026.2.28",
    "tiktoken>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
